Omnibox UI Refresh: align top of raised omnibox with top of location bar

Decreased top inset from 5 to 4 px. With 5 px, the top of the omnibox was 1 pixel higher than the top of the location bar.

Bug: 857068
Change-Id: Id1ea4601aed65f62fffccd05deac5dcbeab8d0d5
Reviewed-on: https://chromium-review.googlesource.com/1117642
Commit-Queue: manuk hovanesian <manukh@chromium.org>
Reviewed-by: Tommy Li <tommycli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571104}
Former-commit-id: 05888f47880ec060bcef689feeb1228ab9be31a4